--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,11 +47,12 @@
                     </form>
                 </li>
                 {# TODO FAIRE LA LISTE DEROULANTE #}
-                {% if app.user %}
-                <li class="nav-item"><a class="nav-link" href="{{ path('signout') }}">Se déconnecter</a></li>
+                {% if not app.user %}
+                    <li class="nav-item"><a class="nav-link" href="{{ path('register') }}">S'enregistrer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('signin') }}">Se connecter</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="{{ path('register') }}">S'enregistrer</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path('signin') }}">Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('signout') }}">Se déconnecter</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('profile') }}">Mon Compte</a></li>
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Panier</a>
@@ -63,8 +64,10 @@
 </nav>
 
 
+<div class="container">
+    {% block body %}{% endblock %}
+</div>
 
-{% block body %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
