--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,9 @@
     <div class="container-fluid">
 
         <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto d-flex justify-content-between mx-auto pt-2">
+            <ul class="navbar-nav d-flex justify-content-between mx-auto align-items-center text-uppercase">
                 {# TODO AFFICHER LE LOGO #}
-                <li><img src="/images/logo.png" alt="" class="logo"></li>
+                <li><img src="/images/logo.png" alt="" class="img-fluid" style="max-width: 7rem"></li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('home_page') }}">Accueil</a>
                 </li>
@@ -41,9 +41,9 @@
                     <a class="nav-link" href="#">Contacts</a>
                 </li>
                 <li class="nav-item">
-                    <form class="d-flex">
-                        <input class="form-control me-sm-2" type="text" placeholder="Search">
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    <form class="d-flex input-group">
+                        <input class="form-control" type="text" placeholder="Rechercher...">
+                        <button class="btn btn-light input-group-append btn-sm" type="submit">valider</button>
                     </form>
                 </li>
                 {# TODO FAIRE LA LISTE DEROULANTE #}
