--- a/templates/profile/editInfos.html.twig
+++ b/templates/profile/editInfos.html.twig
@@ -6,6 +6,7 @@
 
     <h1>Modification des informations utilisateurs</h1>
 
+    {# TODO Remanier le formulaire pour le visuel widget, contraintes, class #}
     {{ form_start(form) }}
     {{ form_row(form.email) }}
     {{ form_row(form.genre) }}
@@ -15,6 +16,10 @@
 
     <button type="submit" class="btn btn-outline-success">Valider</button>
     {{ form_end(form) }}
+
+    <a href="{{ path('profile') }}" class="btn btn-outline-warning" href="">Retour</a>
+
+
 
 
 
