--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,6 +55,9 @@
                     <li class="nav-item"><a class="nav-link" href="{{ path('profile') }}">Mon Compte</a></li>
                 {% endif %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin') }}">Admin</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Panier</a>
                 </li>
 
