--- a/templates/registration/signin.html.twig
+++ b/templates/registration/signin.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Se connecter{% endblock %}
 
 {% block body %}
     <h1>Se connecter</h1>
 
     <form action="{{ path('signin') }}" method="post">
-        <input type="email" name="_email" id="email" placeholder="Saisissez votre email ?">
-        <input type="password" name="_password" id="password" placeholder="Password ?">
+        <input type="email" name="_email" id="email" placeholder="Saisissez votre email ?" value="admin@gmail.com">
+        <input type="password" name="_password" id="password" placeholder="Password ?" value="admin!">
 
         <button type="submit" class="btn">VALIDER</button>
     </form>
