Add & Change & Delete Category back-Admin

--- a/templates/admin/categories/createCategory.html.twig
+++ b/templates/admin/categories/createCategory.html.twig
@@ -6,7 +6,9 @@
 
     {{ form_start(form) }}
     {{ form_row(form.name) }}
+    {{ form_row(form.animal) }}
     <button class="btn btn-outline-dark">Valider</button>
     {{ form_end(form) }}
+
 
 {% endblock %}
