--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -22,7 +22,7 @@
     <div class="d-flex flex-column my-5" style="max-width: 350px">
         <a href="{{ path('animal_index') }}" class="btn btn-secondary mt-3">Afficher toutes les catégories</a>
         <a href="{{ path('animal_create') }}" class="btn btn-secondary mt-3">CREER CATEGORIE</a>
-        <a href="{{ path('users_index') }}" class="btn btn-secondary mt-3">Afficher toutes les sous catégories</a>
+        <a href="{{ path('category_index') }}" class="btn btn-secondary mt-3">Afficher toutes les sous catégories</a>
         <a href="{{ path('category_create') }}" class="btn btn-secondary mt-3">CREER SOUS-CATEGORIE</a>
         <a href="{{ path('users_index') }}" class="btn btn-secondary mt-3">Afficher tous les users</a>
         <a href="{{ path('register') }}" class="btn btn-secondary mt-3">Créer un utilisateur</a>
